--- a/GuardianCapitalLLC/Views/Account/Deposit.cshtml
+++ b/GuardianCapitalLLC/Views/Account/Deposit.cshtml
@@ -72,7 +72,7 @@
 
 	paypal.Buttons({
 		async createOrder() {
-			const response = await fetch("@Url.ActionLink("ProcessDeposit", "Account")", {
+			const response = await fetch("@Url.Action("ProcessDeposit", "Account")", {
 				method: "POST",
 				headers: {
 					"Content-Type": "application/json",
@@ -88,7 +88,7 @@
 			return order.id;
 		},
 		async onApprove(data) {
-			const response = await fetch("@Url.ActionLink("ConfirmDeposit", "Account")", {
+			const response = await fetch("@Url.Action("ConfirmDeposit", "Account")", {
 				method: "POST",
 				headers: {
 					"Content-Type": "application/json",
