--- a/GuardianCapitalLLC/Views/Shared/_ClientLayout.cshtml
+++ b/GuardianCapitalLLC/Views/Shared/_ClientLayout.cshtml
@@ -121,14 +121,19 @@
 				</div>
 			</div>
 			<!-- Footer opened -->
-			<div class="main-footer text-white p-1">
-				<div class="container-fluid pt-0 ht-100p">
+			<div class="main-footer text-white justify-content-between d-flex flex-lg-row flex-column align-items-center">
+				<div>
 					<div class="breadcrumb-header justify-content-between m-0">
 						<div class="left-content">
 							©<script>document.write(new Date().getFullYear());</script> Guardian Capitol LLC.
 						</div>
-						<div class="justify-content-center mt-2">
-						</div>
+					</div>
+				</div>
+				<div class="mt-3 mt-lg-0">
+					<div class="breadcrumb-header justify-content-between m-0">
+						<a asp-controller="Home" asp-action="TermsNConditions" class="text-white">
+							Terms & Conditions
+						</a>
 					</div>
 				</div>
 			</div>
